Fixed empty space when horizontal scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -22,10 +22,10 @@ header {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     background: url("../img/MainPhoto.jpg") no-repeat;
-    background-size: 100% auto;
+    background-size: cover;
     color: black;
 }
 
